[gd_scene load_steps=4 format=3 uid="uid://dolg415b2ypyq"]

[ext_resource type="Script" path="res://scripts/MultiplayerController.gd" id="1_gdphh"]
[ext_resource type="Script" path="res://scripts/WorldLoader.gd" id="2_6x6mj"]
[ext_resource type="PackedScene" uid="uid://c4kf5pkgs6lt3" path="res://scenes/WelcomeMenu.tscn" id="3_idiyd"]

[node name="MainScene" type="Node3D"]
script = ExtResource("1_gdphh")

[node name="WorldRoot" type="Node3D" parent="."]
script = ExtResource("2_6x6mj")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="WelcomeMenu" parent="CanvasLayer/Control" instance=ExtResource("3_idiyd")]
layout_mode = 1
offset_left = 353.0
offset_top = 100.0
offset_right = -348.0
offset_bottom = -113.0

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://scenes/player.tscn")
spawn_path = NodePath("..")

[connection signal="host_session" from="CanvasLayer/Control/WelcomeMenu" to="." method="_on_welcome_menu_host_session"]
[connection signal="join_session" from="CanvasLayer/Control/WelcomeMenu" to="." method="_on_welcome_menu_join_session"]
